objects/simplesurvey__Survey__c.object
<CustomObject>
    <description>Simple Survey</description>
    <fields>
        <fullName>Associate_knowledge_on_case__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>My Support Associate was knowledgeable about the application.</inlineHelpText>
        <label>Associate knowledge on case</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associate_showed_interest__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>My Support Associate demonstrated a genuine interest in resolving my issue.</inlineHelpText>
        <label>Associate showed interest</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associate_understanding_of_case__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>My Support Associate demonstrated clear understanding about my issue.</inlineHelpText>
        <label>Associate understanding of case</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_availability__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>If your issue was not resolved, may we contact you about your issue?</inlineHelpText>
        <label>Contact availability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ease_of_schedule__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>vAuto made it easy to schedule and attend my training session.</inlineHelpText>
        <label>Ease of schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ease_of_use__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>vAuto made it easy to resolve my issue.</inlineHelpText>
        <label>Ease of use</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influence_to_continue_to_pick_vAuto__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>If considering the purchase of additional products from vAuto, how much influence will this experience have on that decision?</inlineHelpText>
        <label>Influence to continue to pick vAuto</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A – unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_their_PM__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>I know who my vAuto Performance Manager is.</inlineHelpText>
        <label>Knows their PM</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NotSatisfiedOther__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>If you answered Other, please specify.</inlineHelpText>
        <label>Not_Satisfied_Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Notes_customer_experience__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>Is there anything else we should know about your recent experience?</inlineHelpText>
        <label>Open Notes - customer experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pacing__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The training content was well-paced and was presented in a clear and concise manner.</inlineHelpText>
        <label>Pacing</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>Was the issue resolved to your satisfaction?</inlineHelpText>
        <label>Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - This is a reoccurring issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Took too long to reach a representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - My call or case was transferred multiple times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - My issue was resolved by another provider (not vAuto)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - My issue was not resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T1_Follow_up__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>What was your biggest challenge?</inlineHelpText>
        <label>T1 Follow up</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>T1_Other__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>Is there anything else we should know about your experience?</inlineHelpText>
        <label>T1 Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trainer_response__c</fullName>
        <description>Question Created by the Survey Builder</description>
        <inlineHelpText>The trainer was able to answer all of my questions and was responsive to my comments.</inlineHelpText>
        <label>Trainer response</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__NPS_Factor__c</fullName>
        <description>Used in reports and dashboards to calculate the Net Promoter Score.</description>
        <formula>if( simplesurvey__Survey_Score__c &lt;=6,-1,
if(simplesurvey__Survey_Score__c &lt;=8,0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Net_Promoter_System__c</fullName>
        <description>Used in reports and dashboards to display the Net Promoter Score.</description>
        <formula>if( simplesurvey__Survey_Score__c &lt;=6,&quot;Detractor&quot;,
if(simplesurvey__Survey_Score__c &lt;=8,&quot;Passive&quot;,&quot;Promoter&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Promoter System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Rating_Scale__c</fullName>
        <description>Rating scale used for a given survey record.</description>
        <inlineHelpText>Rating scale used for a given survey record.</inlineHelpText>
        <label>Rating Scale</label>
        <picklist>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Record_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Comments__c</fullName>
        <inlineHelpText>Why? Please provide some feedback.</inlineHelpText>
        <label>Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Score__c</fullName>
        <label>Survey Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>simplesurvey__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>simplesurvey__Record_Owner__c</columns>
        <columns>simplesurvey__Survey_Score__c</columns>
        <columns>simplesurvey__Survey_Comments__c</columns>
        <columns>simplesurvey__Account__c</columns>
        <columns>simplesurvey__Contact__c</columns>
        <columns>simplesurvey__Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S{00000000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>Client_Experience_Feedback</fullName>
        <active>true</active>
        <label>Client Experience Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>T1_Training_Survey</fullName>
        <active>true</active>
        <label>T1 Training Survey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>